chore: use some java 21 features